# shape-fitting

./: .gitignore  CMakeLists.txt  README.md
include/: cylinder_fitting.h  cylinder_fitting_hough.h  cylinder_fitting_ransac.h  cylinder_segmentation.h  cylinder_segmentation_hough.h  fitting_data.h  gaussian_mixture_model.h  gaussian_sphere.h  orientation_accumulator_space.h  plane_fitting.h  plane_fitting_ransac.h  sphere_fitting.h  sphere_fitting_hough.h  spherical_grid.h
scripts/: cylinder_fitting_tests.sh  fitting_tests.sh  generate_clouds.sh  generate_cylinder_clouds.sh  generate_sphere_clouds.sh  get_tabletop_point_clouds.sh  real_data_tests.sh  sphere_fitting_tests.sh  tabletop_scenarios_tests.sh
src/: cylinder_fitting.cpp  cylinder_fitting_hough.cpp  cylinder_fitting_ransac.cpp  cylinder_segmentation.cpp  cylinder_segmentation_hough.cpp  cylinder_segmentation_ransac.cpp  fitting_data.cpp  gaussian_sphere.cpp  plane_fitting.cpp  plane_fitting_ransac.cpp  sphere_fitting_hough.cpp
test/: cylinder_fitting_test.cpp  cylinder_generation.cpp  cylinder_performance_plots.py  cylinder_real_data_test.cpp  helpers.h  plots.py  sphere_fitting_test.cpp  sphere_generation.cpp  sphere_performance_plots.py  tabletop_scenario_test.cpp
